--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,36 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.batch:spring-batch-integration' // AsyncItemProcessor, AsyncItemWriter
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.projectlombok:lombok:1.18.20'// WebClient
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor" // @ConfigurationProperties
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'mysql:mysql-connector-java'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// lombok
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// hibernate-types
+	implementation 'com.vladmihalcea:hibernate-types-52:2.19.2'
+
+	// #### test ####
+	testImplementation "org.testcontainers:testcontainers:1.17.6"
+	implementation platform('org.testcontainers:testcontainers-bom:1.17.6')
+	testImplementation('org.testcontainers:mysql')
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	testImplementation 'org.apache.commons:commons-lang3:3.12.0'
+
 }
 
 tasks.named('test') {
