--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari: # Spring Boot2?? default DBCP? hikariCP???.
       maximum-pool-size: 20             # pool? ?? ??? ?? connection ?
-
+  main:
+    allow-bean-definition-overriding=true:
 
   sql:
     init:
@@ -17,7 +18,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     defer-datasource-initialization: true
     show-sql: true
 
